tests/expected_invalid_public_permit_param_private_type.diag.out
<input>:4:26: error: public API cannot reference private type 'Access'
    public fn use(as access: Access) -> Int { 0 }
                             ^^^^^^
